--- a/login/resources/package.json
+++ b/login/resources/package.json
@@ -4,14 +4,14 @@
   "description": "a custome theme for keycloak login page",
   "main": "index.js",
   "scripts": {
-    "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "watch:sass": "node-sass sass/main.scss css/login.css -w",
     "devserver": "live-server",
     "start": "npm-run-all --parallel devserver watch:sass",
-    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
-    "concat:css": "concat -o css/style.comp.css",
-    "prefix:css": "postcss --use autoprefixer -b 'last 4 versions' css/style.concat.css -o css/style.prefix.css",
-    "compress:css": "node-sass css/style.comp.css css/login.css --output-style compressed",
-    "build:css": "npm-run-all compile:sass compress:css"
+    "compile:sass": "node-sass sass/main.scss tmp/style.comp.css",
+    "concat:css": "concat -o tmp/style.concat.css tmp/icon-font.css tmp/style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\" tmp/style.comp.css -o tmp/style.prefix.css",
+    "compress:css": "node-sass tmp/style.prefix.css css/login.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass prefix:css compress:css"
   },
   "author": "Alix",
   "license": "ISC",
